--- a/main.css
+++ b/main.css
@@ -7,16 +7,18 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.main {
+.journal-policy-search {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 100px;
+  padding-top: 50px;
 }
 
-h1 {
+.journal-policy-search h1 {
   margin-bottom: 1em;
   color: #501315;
+  font-size: 2em !important;
 }
 
 .policies {
@@ -51,16 +53,17 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: left;
-  row-gap: 1em;
+  row-gap: 0.5em;
   border: 1px solid gray;
   margin-bottom: 2em;
   padding: 2em;
   border-radius: 2em;
+  color: black;
 }
 
 .card__title,
 .card__title a {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: bold;
   text-decoration: none;
   color: #501315;
